# substrate_first

./: Cargo.toml  README.md
node/: Cargo.toml
node/src/: command.rs  service.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
