# https://doc.rust-lang.org/cargo/reference/index.html

[workspace]
members = [
    'node',
    'pallets/template',
    'runtime',
]
[profile.release]
panic = 'unwind'

[dependencies]
pallet-nicks = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }

[features]
default = ['std']
std = [
    ...
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-nicks/std',
    ...
]